prevent row from collapsing upon dragging

--- a/app/assets/stylesheets/activeadmin-sortable.css
+++ b/app/assets/stylesheets/activeadmin-sortable.css
@@ -1,1 +1,2 @@
 .activeadmin-sortable .handle { cursor: ns-resize; }
+.ui-sortable-helper { display: table; }
